			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

BUG: (12/19/05, GVG) 3D Colors were gone since last changes in LayersTab.java
FIX: Code is back again

IMP: (12/19/05, GVG) Two new Epic preferences in Spice tab.

IMP: (12/16/05, GVG) Small change in EpicOut.java to speed up reading process. This is for Bug#779.

IMP: (12/16/05, GVG) Major changes in ErrorLogger.ErrorHighlight and Highlight.

IMP: (12/16/05, SMR) Explorer window allows multiple selections where sensible
     (waveform signals, sweeps, deleting cells, re-viewing cells) (Bug #774).

IMP: (12/16/05, SMR) Dragging panels in the waveform window now places it above
     or below according to the final mouse position (Bug #778).

IMP: (12/16/05, DN) Preliminary code for EpicReader, spawned as another process.

IMP: (12/15/05, GVG) Preliminary code for automatic fill.

BUG: (12/15/05, GVG) Can't not paste a single object in Clipboard (Bug #777)
FIX: User.FRAME_LAST_CHANGED_BY should not be counted as Variable.

BUG: (12/14/05, SMR) Project management crashes when changes are made to un-checked-out cells (Bug #776).
FIX: In Project.detectIllegalChanges(), make the prompt happen in the GUI thread.

BUG: (12/12/05, SMR) Interactive sizing disallows dragging on the other side of the anchor (Bug #558).
FIX: In SizeListener.getNewNodeSize(), handle dragging beyond the opposite point.

BUG: (12/9/05, GVG) getCurrentCell not defined in Main.UserInterfaceDummy but it is required (Compactation regression failed).
FIX: Move code under BATCHMODE code to UserInterfaceDummy. In case of batch mode, current cell is from current library.
Remove conditions in WindowFrame.java if Job.BATCHMODE.

BUG: (12/9/05, GVG) Rounding problem in GateGeneration regression noticed while working on the memo.
FIX: Use StdCellParams.getResolution() instead of value stored in Technology.
